flex wrap breaking fix

--- a/professional-content/JS/scripts/style.css
+++ b/professional-content/JS/scripts/style.css
@@ -56,7 +56,13 @@ h1, h3{
 
 #forecast-card{
     overflow-y: visible;
+    min-width: 1365px;
 }
+@media only screen and (max-width: 1400px) {
+    #forecast-card{
+        min-width: 875px !important;
+    }
+  }
 
 #bgBlobBlue{
     position: absolute;
@@ -103,19 +109,28 @@ h1, h3{
 #day-container{
     width: 100%;
     height: 90%;
-    position: absolute;
-    margin-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#day-container td{
-    display: inline-table;
-    height: 100%;
+#day-container div{
+    min-height: 150px;
     background-color: #E6E7E8;
     border-radius: 10px;
     vertical-align: top;
     width: calc(12.5% - 20px);
     margin: 10px 10px 10px 10px;
-    min-height: 50px;
+    min-width: 150px;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0px !important;
+    display: inline-table;
+}
+
+.break, .spacer{
+    background-color: white !important;
 }
 
 .day-title{
